[OPYD-321] fixing admin toolbar on mobile alert section

--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -677,6 +677,14 @@ body {
   margin-left: 15rem;
 }
 
+.toolbar-vertical .top-navs.affix ~ .viewport {
+  margin-top: 0;
+}
+
+.toolbar-vertical .top-navs.affix-top ~ .viewport {
+  margin-top: 39px;
+}
+
 .toolbar-vertical .top-navs {
   margin-top: 39px;
 }
